@@ -67,6 +67,7 @@ class CItemprototype extends CItemGeneral{
 			'searchByAny'			=> null,
 			'startSearch'			=> null,
 			'excludeSearch'			=> null,
+			'searchWildcardsEnabled'=> null,
 // OutPut
 			'output'				=> API_OUTPUT_REFER,
 			'selectHosts'			=> null,
