@@ -90,6 +90,8 @@ class CUserMacro extends CZBXAPI{
 			'searchByAny'				=> null,
 			'startSearch'				=> null,
 			'excludeSearch'				=> null,
+			'searchWildcardsEnabled'	=> null,
+
 // OutPut
 			'output'					=> API_OUTPUT_REFER,
 			'selectGroups'				=> null,
