@@ -74,7 +74,7 @@ class CUserMedia extends CZBXAPI{
 			'searchByAny'				=> null,
 			'startSearch'				=> null,
 			'excludeSearch'				=> null,
-
+			'searchWildcardsEnabled'	=> null,
 // OutPut
 			'output'					=> API_OUTPUT_REFER,
 			'editable'					=> null,
